syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.github.ptracker.service";
option java_outer_classname = "AccountProto";

package com.github.ptracker.service;

import "com/github/ptracker/entity/Account.proto";

service Account {

  rpc get(AccountGetRequest) returns (AccountGetResponse) {}

  rpc query(AccountQueryRequest) returns (AccountQueryResponse) {}

  rpc create(AccountCreateRequest) returns (AccountCreateResponse) {}

  rpc update(AccountUpdateRequest) returns (AccountUpdateResponse) {}

  rpc delete(AccountDeleteRequest) returns (AccountDeleteResponse) {}
}

message AccountGetRequest {
  string id = 1;
}

message AccountGetResponse {
  com.github.ptracker.entity.Account account = 1;
}

message AccountQueryRequest {
  com.github.ptracker.entity.Account template = 1;
}

message AccountQueryResponse {
  repeated com.github.ptracker.entity.Account account = 1;
}

message AccountCreateRequest {
  com.github.ptracker.entity.Account account = 1;
}

message AccountCreateResponse {
}

message AccountUpdateRequest {
  com.github.ptracker.entity.Account account = 1;
  bool should_upsert = 2;
}

message AccountUpdateResponse {
}

message AccountDeleteRequest {
  string id = 1;
}

message AccountDeleteResponse {
}
